--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.5",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@ngneat/tailwind": "^7.0.3",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "express": "^4.18.2",
